cluster/apps/blogs/simone/ingressroutes.yaml
# wp-simone-local-ingressroute
# wp-simone-http-ingressroute
# wp-simone-https-ingressroute

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: wp-simone-local-ingressroute
  namespace: wp-simone
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`simone.${SECRET_DOMAIN_LOCAL}`)
      kind: Rule
      services:
        - name: wp-simone-wp-simone-wordpress
          port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: wp-simone-http-ingressroute
  namespace: wp-simone
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`simone.${SECRET_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: https-redirect-scheme-middleware
          namespace: traefik
      services:
        - name: wp-simone-wp-simone-wordpress
          port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: wp-simone-https-ingressroute
  namespace: traefik
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns01-production-do"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`simone.${SECRET_DOMAIN}`)
      kind: Rule
      middlewares:
        # - name: authelia-middleware
        #   namespace: authentication
        - name: secure-headers-middleware
          namespace: traefik
      services:
        - name: wp-simone-wp-simone-wordpress
          namespace: wp-simone
          port: 80
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"
    options:
      name: default-tlsoption
      namespace: traefik
